Fix horizontal scrolling of sensitivity analysis job result on safari

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -707,6 +707,7 @@
 
     .sd-sensitivity-analysis-job-results {
       overflow: auto;
+      @include scrollbar-mixin();
     }
 
     .sd-sensitivity-analysis-action-buttons {
